# ScreenScore

./: .dockerignore  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  index.html  package-lock.json  package.json  tailwind.config.js
backend/: pyproject.toml
backend/evals/: README.md  corpus.py  lf.py  metrics.py  run_eval.py
backend/screenscore/: __init__.py  config.py  export.py  hardware.py  main.py
backend/screenscore/api/: routes.py
backend/screenscore/db/: __init__.py  repository.py
backend/screenscore/db/migrations/: 0001_init.sql  0002_diffs.sql
backend/screenscore/parsing/: __init__.py  fdx.py  fountain.py  models.py  pdf.py  text.py
backend/screenscore/pipeline/: diff.py  digest.py  llmjson.py  progress.py  retrieval.py  stages.py  stub.py  verify.py
backend/screenscore/pipeline/prompts/: __init__.py  characters.txt  diff.txt  map.txt  notes.txt  specialist.txt  synthesis_commercial.txt  synthesis_narrative.txt
backend/screenscore/pipeline/prompts/dimensions/: characterization.txt  dialogue.txt  marketability.txt  premise_originality.txt  (+4 more)
backend/screenscore/runtime/: __init__.py  base.py  fake.py  ollama.py
backend/screenscore/schemas/: __init__.py  report.schema.json
backend/tests/: conftest.py  pdf_fixture.py  report_fixture.py  test_api.py  test_db.py  test_diff.py  test_evals.py  test_export.py  test_hardware.py  test_parsing.py  test_pipeline.py  test_retrieval.py  test_runtime_guard.py  test_schema.py  test_verify.py
backend/tests/corpus/: clean.fountain  messy.txt  sample.fdx
(+69 files in other folders)
