[project]
name = "screenscore"
version = "2.0.0a1"
description = "ScreenScore v2 engine — local-first, privacy-preserving screenplay coverage"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "jsonschema>=4.22",
    "pdfplumber>=0.11",
    "fpdf2>=2.7",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["screenscore"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
